# events-ledger

./: .gitignore  README.md  TECHNICAL_REVIEW.md  dev.sh  docker-compose.yml  package-lock.json  package.json  proxy.ts  publish.sh  render.yaml  tsconfig.json  vercel.json
.claude/: launch.json
app/: layout.tsx  manifest.ts  page.tsx
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2dc842b37f3f_initial_schema.py  a1b2c3d4e5f6_ballet_additional_company_ids.py  a3f1c8e20b44_add_event_status.py  b2c3d4e5f6a7_payment_method.py  c5f07f57cce4_add_opera_composers.py  d3e4f5a6b7c8_event_credit.py  e1a2b3c4d5e6_add_event_related_event_ids.py  f2b3c4d5e6f7_rating_float.py  g3h4i5j6k7l8_review_and_links.py  h4i5j6k7l8m9_classical_setlist.py  i5j6k7l8m9n0_drop_event_status.py  j6k7l8m9n0o1_add_descriptions.py  k7l8m9n0o1p2_add_description_source_url.py
backend/app/: auth.py  main.py
backend/app/api/: auth.py  credits.py  events.py  payment_methods.py  reference.py  scrape.py  setlist.py
backend/app/models/: __init__.py  core.py  extensions.py  people.py  works.py
backend/app/schemas/: events.py  reference.py
backend/seed/: seed.py
components/: AddEvent.tsx  EventDetailPanel.tsx  EventTypeIcon.tsx  GuestContext.tsx  Nav.tsx  Search.tsx  Stats.tsx  Timeline.tsx  Upcoming.tsx
docs/: app-migration-plan.md  events-ledger-data-entries.md  events-ledger-handoff.md  events-ledger-schema.md  schema.md
frontend/: astro.config.mjs  netlify.toml  package-lock.json  package.json  vercel.json
lib/: api.ts  auth.ts  (+5 more)
(+1364 files in other folders)
